# ctr-native

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_ANDROID.md  VERSION  build_macos.sh  ctr_native.c  extract_assets.sh  game_includes.h  main.c  platform.h  run.sh
android/app/: build.gradle
docs/: DATA_SECTIONS.md  MACOS_PORT.md  MEMORY_MODEL.md  REPLAYS.md
game/: 221.c  222.c  223.c  224.c  225.c  BOTS.c  CAM.c  CDSYS.c  COLL.c  DecalMP.c  Display.c  ElimBG.c  FLARE.c  GAMEPAD.c  INSTANCE.c  JitPool.c  LIST.c  LevInstDef.c  MEMPACK.c  PROC.c  Particle.c  PlayLevel.c  PushBuffer.c  RECTMENU.c  RaceFlag.c  SelectProfile.c  SubmitName.c  TEST_DrawInstances.c  Vector.c  zGlobal_DATA.c  zGlobal_SDATA.c
game/221/: 221_Full.c
game/222/: 222_Full.c
game/223/: 223_Full.c
game/224/: 224_Full.c
game/225/: 225_Full.c
game/226/: 226_00_DrawLevelOvr1P.c  R226.c
game/227/: 227_00_DrawLevelOvr2P.c  R227.c
game/228/: 228_00_DrawLevelOvr3P.c  R228.c
game/229/: 229_00_DrawLevelOvr4P.c  R229.c
game/230/: 230_01_MM_TransitionInOut.c  230_02_MM_Title_MenuUpdate.c  230_04_MM_Title_CameraMove.c  230_05_MM_Title_ThTick.c  230_31_MM_MenuProc_Main.c  230_40_MM_Characters_AnimateColors.c  230_44_MM_Characters_DrawWindows.c  230_48_MM_Characters_RestoreIDs.c  230_50_MM_Characters_MenuProc.c  230_52_MM_TrackSelect_Video_State.c  230_55_MM_TrackSelect_Init.c  230_56_MM_TrackSelect_MenuProc.c  230_58_MM_CupSelect_Init.c  230_59_MM_CupSelect_MenuProc.c  230_61_MM_Battle_DrawIcon_Weapon.c  230_62_MM_Battle_Init.c  230_63_MM_Battle_MenuProc.c  230_65_MM_HighScore_Draw.c  230_66_MM_HighScore_Init.c  230_67_MM_HighScore_MenuProc.c  230_68_MM_Scrapbook_Init.c  230_69_MM_Scrapbook_PlayMovie.c  230_70_MM_ResetAllMenus.c  230_72_MM_JumpTo_Title_FirstTime.c  D230.c  MM_Characters.c  MM_MenuFlow.c  MM_TrackSelect.c
game/231/: 231_016_RB_GenericMine_ThTick.c  231_020_RB_TNT_ThTick_ThrowOnHead.c  231_024_RB_MovingExplosive_ThTick.c  231_033_RB_Warpball_TurnAround.c  231_035_RB_MaskWeapon_FadeAway.c  231_036_RB_MaskWeapon_ThTick.c  231_038_RB_ShieldDark_ThTick_Grow.c  231_040_RB_Player_ToggleFlicker.c  231_041_RB_RainCloud_FadeAway.c  231_042_RB_RainCloud_ThTick.c  231_043_RB_RainCloud_Init.c  231_050_RB_Burst_ThTick.c  231_051_RB_Burst_CollThBucket.c  231_054_RB_Burst_DrawAll.c  231_058_RB_Blade_ThTick.c  231_061_068_RB_Crate.c  231_069_072_RB_Crystal.c  231_075_RB_CtrLetter_LInC.c  231_076_RB_CtrLetter_ThTick.c  231_082_085_RB_Armadillo.c  231_086_088_RB_Fireball.c  231_089_091_RB_FlameJet.c  231_092_094_RB_Follower.c  231_099_100_RB_Minecart.c  231_104_109_RB_Plant.c  231_110_113_RB_Seal.c  231_116_119_RB_Spider.c  231_Full.c  D231.c  R231.c  RB_Banner.c  RB_Baron.c  RB_Blade.c  RB_Blowup.c  RB_Burst.c  RB_CtrLetter.c  RB_Default.c  RB_Explosion.c  RB_GenericMine.c  RB_Hazard.c  (+9 more)
game/232/: 232_04_AH_WarpPad_ThTick.c  232_06_AH_WarpPad_LInB.c  232_09_AH_Garage_ThTick.c  232_12_AH_SaveObj_ThTick.c  232_13_AH_SaveObj_LInB.c  232_15_AH_Door_ThTick.c  232_16_AH_Door_LInB.c  232_20_AH_Map_HubArrowOutter.c  232_21_AH_Map_HubItems.c  232_22_AH_Map_Warppads.c  232_23_AH_Map_Main.c  232_25_AH_Pause_Draw.c  232_26_AH_Pause_Update.c  232_27_AH_HintMenu_FiveArrows.c  232_29_AH_HintMenu_MenuProc.c  232_Full.c  AH_Sign.c  (+5 more)
include/: common.h  ctr_math.h  decomp_functions.h  functions.h  game_layouts.h  gpu.h  namespace_Bots.h  namespace_Camera.h  namespace_Cdsys.h  namespace_Coll.h  namespace_Decal.h  namespace_Display.h  namespace_DrawLevel.h  namespace_Gamepad.h  namespace_Ghost.h  namespace_Howl.h  namespace_Instance.h  namespace_JitPool.h  namespace_Level.h  namespace_List.h  namespace_Load.h  namespace_Main.h  namespace_Memcard.h  namespace_Mempack.h  namespace_Particle.h  namespace_Proc.h  namespace_PushBuffer.h  namespace_RectMenu.h  namespace_SelectProfile.h  namespace_UI.h  namespace_Vehicle.h  ovr_226.h  ovr_227.h  ovr_230.h  ovr_231.h  ovr_233.h  regionsEXE.h
platform/: native_assets.c  native_audio.c  native_checkpoint_file.c  native_glad.c  native_gpu.c  native_libgpu.c  native_memcard.c  native_memory.c  native_platform.c  native_reloc.c  native_renderer.c  native_replay_scheduler.c  native_str.c
(+284 files in other folders)
